# lickle-lock

./: .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json
.github/workflows/: CI.yml  windows.yml
lib/: index.ts
lib/backend/: guard.ts  index.ts  lockable.ts  node.ts  types.ts
lib/core/: guard.ts  index.ts  locking.ts  node.ts  types.ts
scripts/: build.js
src/: lib.rs
src/os/: unix.rs  windows.rs
tests/: lock.test.ts  windows.ts
tests/util/: child.js  index.ts  util.js  worker.js
