
[package]
authors = ["Dan Beaven <dm.beaven@gmail.com>"]
edition = "2021"
name = "lickle-lock"
version = "0.0.1-alpha.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0", features = ["tokio_rt"] }
napi-derive = "3.0.0"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.153"

[target.'cfg(windows)'.dependencies]
libc = "0.2.153"
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
